Re-namespace tests to prevent collision (#3)

--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests"
+            "Watson\\Aggregate\\Tests\\": "tests"
         }
     },
     "config": {
