--- a/composer.json
+++ b/composer.json
@@ -15,12 +15,12 @@
         }
     ],
     "require": {
-        "php": "^7.3|^8.0",
-        "illuminate/database": "~8.0"
+        "php": "^8.0",
+        "illuminate/database": "~9.0"
     },
     "require-dev": {
-        "mockery/mockery": "^1.3.1",
-        "orchestra/testbench": "~6.0",
+        "mockery/mockery": "^1.4.4",
+        "orchestra/testbench": "~7.0",
         "phpunit/phpunit": "^9.0"
     },
     "autoload": {
