--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/database": "^10.0|^11.0"
+        "illuminate/database": "^10.0|^11.0|^12.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.4.4",
-        "orchestra/testbench": "^8.0|^9.0",
-        "phpunit/phpunit": "^9.5.10|^10.5"
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "phpunit/phpunit": "^9.5.10|^10.5|^11.5.3"
     },
     "autoload": {
         "psr-4": {
